sumo/tests/dfrouter/errors/network/edge/lane/root__edge__lane__false21c/errors.dfrouter
Error: Could not parse lane shape (edge '2').
Quitting (on error).
